# specialist

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.development.yml  docker-compose.yml  pyproject.toml
docs/: eslint.config.mjs  mdx-components.js  next.config.ts  package.json  pnpm-lock.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.development  README.md  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
plugins/enthusiast-agent-catalog-enrichment/: README.md  pyproject.toml
plugins/enthusiast-agent-catalog-enrichment/src/enthusiast_agent_catalog_enrichment/: __init__.py  agent.py  config.py  execution_definition.py  prompt.py
plugins/enthusiast-agent-catalog-enrichment/src/enthusiast_agent_catalog_enrichment/tools/: upsert_product_details_tool.py
plugins/enthusiast-agent-order-intake/: README.md  pyproject.toml
plugins/enthusiast-agent-order-intake/src/enthusiast_agent_order_intake/: __init__.py  agent.py  config.py  prompt.py
plugins/enthusiast-agent-order-intake/src/enthusiast_agent_order_intake/tools/: __init__.py  place_order_tool.py
plugins/enthusiast-agent-tool-calling/: README.md  pyproject.toml
plugins/enthusiast-agent-tool-calling/src/enthusiast_agent_tool_calling/: __init__.py  base_tool_calling_agent.py
plugins/enthusiast-common/: README.md  pyproject.toml
plugins/enthusiast-common/enthusiast_common/: __init__.py  interfaces.py  utils.py
plugins/enthusiast-common/enthusiast_common/agentic_execution/: __init__.py  base.py  errors.py  input.py  result.py  status.py  validators.py
plugins/enthusiast-common/enthusiast_common/agents/: __init__.py  base.py  config.py
plugins/enthusiast-common/enthusiast_common/builder/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/callbacks/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/config/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/connectors/: __init__.py  ecommerce_platform_connector.py
plugins/enthusiast-common/enthusiast_common/errors/: __init__.py  base_agent_friendly_error.py  ecommerce_connector_error.py  retriever_error.py
plugins/enthusiast-common/enthusiast_common/injectors/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/llm/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/registry/: __init__.py  agents.py  embeddings.py  llm.py  models.py
plugins/enthusiast-common/enthusiast_common/repositories/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/retrievers/: __init__.py  base.py  base_product_retriever.py  vector_store.py
plugins/enthusiast-common/enthusiast_common/services/: conversation.py  file.py
plugins/enthusiast-common/enthusiast_common/structures/: __init__.py  address.py  base_content.py  base_file_content.py  base_image_content.py  document_chunk_details.py  document_details.py  file_types.py  llm_file.py  product_details.py  product_update_details.py  repositories_instances.py  text_content.py
plugins/enthusiast-common/enthusiast_common/tools/: __init__.py  base.py
plugins/enthusiast-common/enthusiast_common/tools/files/: list_files_tool.py  perform_file_operation_tool.py
plugins/enthusiast-file-parsers/: README.md  pyproject.toml
plugins/enthusiast-file-parsers/enthusiast_file_parsers/: pdf.py  text.py
plugins/enthusiast-model-anthropic/: README.md  pyproject.toml
plugins/enthusiast-model-anthropic/enthusiast_model_anthropic/: __init__.py  language_model.py
plugins/enthusiast-model-azureopenai/: README.md  pyproject.toml
plugins/enthusiast-model-azureopenai/enthusiast_model_azureopenai/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-model-google/: README.md  pyproject.toml
plugins/enthusiast-model-google/enthusiast_model_google/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-model-mistral/: README.md  pyproject.toml
plugins/enthusiast-model-mistral/enthusiast_model_mistral/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-model-ollama/: README.md  pyproject.toml
plugins/enthusiast-model-ollama/enthusiast_model_ollama/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-model-openai/: README.md  pyproject.toml
plugins/enthusiast-model-openai/enthusiast_model_openai/: __init__.py  embedding.py  language_model.py
plugins/enthusiast-source-medusa/: LICENCE.md  README.md  pyproject.toml
plugins/enthusiast-source-medusa/enthusiast_source_medusa/: __init__.py  medusa_api_client.py  medusa_integration.py  medusa_platform_connector.py  medusa_product_source.py
plugins/enthusiast-source-sample/: README.md  pyproject.toml
plugins/enthusiast-source-sample/enthusiast_source_sample/: __init__.py  document_source.py  product_source.py  sample_documents.csv  sample_products.csv
plugins/enthusiast-source-sanitycms/: README.md  pyproject.toml
plugins/enthusiast-source-sanitycms/enthusiast_source_sanitycms/: __init__.py  source.py
plugins/enthusiast-source-shopify/: LICENSE.md  README.md  pyproject.toml
plugins/enthusiast-source-shopify/enthusiast_source_shopify/: __init__.py  source.py
plugins/enthusiast-source-shopware/: README.md  pyproject.toml
plugins/enthusiast-source-shopware/enthusiast_source_shopware/: __init__.py  source.py
plugins/enthusiast-source-solidus/: LICENCE.md  README.md  pyproject.toml
plugins/enthusiast-source-solidus/enthusiast_source_solidus/: __init__.py  source.py
plugins/enthusiast-source-woocommerce/: README.md  pyproject.toml
plugins/enthusiast-source-woocommerce/enthusiast_source_woocommerce/: __init__.py  source.py
plugins/enthusiast-source-wordpress/: README.md  pyproject.toml
plugins/enthusiast-source-wordpress/enthusiast_source_wordpress/: __init__.py  source.py
server/: Dockerfile.development  README.md  conftest.py  docker-entrypoint-development.sh  docker-entrypoint.sh  manage.py  pyproject.dev.toml  pyproject.toml  pytest.ini  requirements.txt  sample.env  sample.test.env  utils.py
(+370 files in other folders)
