[tool.poetry]
name = "enthusiast-model-anthropic"
version = "1.0.0"
description = "A plugin for Enthusiast that provides an Anthropic connector."
authors = ["Mateusz Porębski <mateusz.porebski@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^1.2"
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
anthropic = ">=0.80,<1.0"
langchain-anthropic = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"