[tool.poetry]
name = "enthusiast-model-google"
version = "1.3.0"
description = "A plugin for Enthusiast that provides a Google Gemini connector."
authors = ["Damian Sowiński <damian.sowinski@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^1.2"
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
google-genai = "^1.70.0"
langchain-google-genai = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
