[tool.poetry]
name = "enthusiast-model-mistral"
version = "1.2.0"
description = "A plugin for Enthusiast that provides an Mistral connector."
authors = ["Damian Sowiński <damian.sowinski@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^1.2"
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
langchain-mistralai = "^1.1"
mistralai = "^1.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
