[tool.poetry]
name = "enthusiast-model-ollama"
version = "1.3.0"
description = "A plugin for Enthusiast that provides an Ollama connector."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^1.2"
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
langchain-ollama = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
