[tool.poetry]
name = "enthusiast-model-openai"
version = "1.4.0"
description = "A plugin for Enthusiast that provides an OpenAI connector."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain-core = "^1.2"
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
openai = "^1.86.0"
langchain-openai = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
