[tool.poetry]
name = "enthusiast-source-medusa"
version = "1.3.1"
description = "A plugin for Enthusiast that provides a Medusa products importer."
authors = ["Kuba Szczęśniak <kuba.szczęśniak@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = ">=1.6.1,<2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
