[tool.poetry]
name = "enthusiast-source-shopify"
version = "1.3.0"
description = "A plugin for Enthusiast that provides a Shopify products importer."
authors = ["Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
shopifyapi = "^12.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
