[tool.poetry]
name = "enthusiast-source-woocommerce"
version = "1.3.0"
description = "A plugin for Enthusiast that provides a WooCommerce products importer."
authors = ["jakubl2290", "Rafal Cymerys <rafal@upsidelab.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
enthusiast-common = ">=1.6.0,<2"
woocommerce = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
